fix overflow

--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
 body {
   background-color: darkgray;
   margin: 0;
@@ -7,6 +21,7 @@ body {
 #root {
   width: 100vw;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 .top-bar {
